# EECS376-Lab

./: tuck_arm.launch
Lab1-Turtlebot/src/: lab1.cpp
Lab2-Reactive-Control/my_lidar_alarm/: CMakeLists.txt  package.xml
Lab2-Reactive-Control/my_lidar_alarm/src/: my_lidar_alarm.cpp
Lab2-Reactive-Control/my_stdr_control/: CMakeLists.txt  README.md  package.xml
Lab2-Reactive-Control/my_stdr_control/src/: my_reactive_commander.cpp
Lab3-Wall-Following/mobile_PS3_wall_follow/: CMakeLists.txt
Lab3-Wall-Following/mobile_PS3_wall_follow/src/: wall_follower.cpp
Lab4_traj_gen/Lab4_changes/: README.md
Lab5_PCL_Orientation/: CMakeLists.txt  README.md  package.xml
Lab5_PCL_Orientation/src/: box_filter_and_segment.cpp  find_blobs.cpp
Lab6/Lab6/baxter_variations/: baxter_on_mobot.launch  baxter_on_mobot_no_gazebo.launch
Lab6/Lab6/lidar_alarm_2/: CMakeLists.txt
Lab6/RVIZ Config/: Robot_W_laser_pos.rviz
Lab6/baxter_variations/: baxter_on_mobot_no_gazebo.launch
Lab6/lin_steering/src/: steering_algorithm.h
Lab6/mobot_pub_des_state/: CMakeLists.txt
Lab6/mobot_pub_des_state/src/: pub_des_state.h  pub_des_state_main.cpp  pub_des_state_path_client.cpp
Lab7/: README.md
Lab7/Lab7/: README.md
Lab8/: CMakeLists.txt  README.md  package.xml
Lab8/src/: lab8_blindManip.cpp
Lab9/: CMakeLists.txt
Lab9/Lab9/: README.md  package.xml
Lab9/object_finder/: CMakeLists.txt  README.md  package.xml
Lab9/part_codes/: CMakeLists.txt  README.md  package.xml
mobile_PS3_wall_follow/: README.md  package.xml
turtle-test/: CMakeLists.txt  package.xml
(+35 files in other folders)
